--- a/src/components/HeaderMe/Header.css
+++ b/src/components/HeaderMe/Header.css
@@ -37,7 +37,7 @@ header {
 .cta {
     margin-top: 2.5rem;
     display: flex;
-    gap: 1.2rem;
+    gap: 2.2rem;
     justify-content: center;
 }
 .cta .button{
@@ -75,10 +75,9 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.8rem;
+    gap: 3.8rem;
     position: absolute;
     left: 0;
-    bottom: 10rem;
     font-size: 2.4rem;
     
 }
@@ -238,6 +237,8 @@ header {
     color:black;
     margin-top: 4rem;
     font-size: 1.2rem;
+    background-color: rgb(58, 206, 58);
+
 }
 .dropitem select:hover{
     background-color: green;
